WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15701
The curl http backend does not deal properly with redirects
https://bugs.webkit.org/show_bug.cgi?id=15701
Summary
The curl http backend does not deal properly with redirects
Alp Toker
Reported
2007-10-25 22:41:47 PDT
Sites like
http://news.google.com/
don't navigate properly to external sites.
Attachments
Implement http redirect support
(2.31 KB, patch)
2007-10-27 02:38 PDT
,
Alp Toker
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-10-27 02:38:38 PDT
Created
attachment 16899
[details]
Implement http redirect support
Adam Roben (:aroben)
Comment 2
2007-10-27 23:20:43 PDT
Comment on
attachment 16899
[details]
Implement http redirect support + String location = d->m_response.httpHeaderField("location"); Don't you need to pass in "Location" to match the case of the header name? r=me
Alp Toker
Comment 3
2007-10-29 02:45:55 PDT
Landed in
r27188
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug