http://bugs.webkit.org/show_bug.cgi?id=15701 The curl http backend does not deal properly with redirects

Implement http redirect support.


Canonical link: https://commits.webkit.org/21109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27188 268f45cc-cd09-0410-ab3c-d52691b4dbfc